Add static CV prototype and begin lifting state

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -15,7 +15,15 @@ body {
   box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.525);
 }
 
-#root > form {
+#root > .app > form.dead {
+  display: none;
+}
+
+.app {
+  margin: auto;
+}
+
+#root form {
   width: 700px;
   margin: auto;
   display: grid;
