Implement first functioning version of the app

--- a/src/styles/cv.css
+++ b/src/styles/cv.css
@@ -1,21 +1,24 @@
 .cv {
-  display: none;
+  display: block;
+  margin-top: 17.5px;
+  margin-bottom: 17.5px;
   color: black;
   font-family: Helvetica, Arial, sans-serif;
   background-color: #fff;
   width: 540.9px;
-  height: 700px;
+  height: fit-content;
+  min-height: 700px;
   padding: 20px;
+}
+
+.cv.dead {
+  display: none;
 }
 
 .cv .top {
   display: grid;
   grid-template-columns: 1fr 130px;
   grid-template-rows: 1fr 1fr;
-}
-
-.cv.alive {
-  display: grid;
 }
 
 .cv .image {
@@ -141,7 +144,7 @@
 
 .edu .second {
   display: flex;
-  gap: 15px;
+  gap: 10px;
   font-size: 1.3rem;
 }
 
